[package]
name = "libp2p-nat"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "(WIP) Implementation of port forwarding for libp2p"
repository = "https://github.com/dariusc93/libp2p-nat"
readme = "README.md"
keywords = ["libp2p", "p2p", "networking"]
authors = ["Darius Clark"]
exclude = [".gitignore"]

[features]
default = ["tokio"]
tokio = ["dep:tokio", "igd-next/aio_tokio", "natpmp/tokio"]
async-std = ["dep:async-std", "igd-next/aio_async_std", "natpmp/async-std"]

[dependencies]
libp2p = { version = "0.52" }
futures = "0.3"
igd-next = { version = "0.13", default-features = false }
void = "1"
tokio = { version = "1", optional = true, features = ["full"] }
async-std = { version = "1", optional = true }
log = "0.4"
anyhow = "1"
wasm-timer = "0.2"

[target.'cfg(not(target_os = "ios"))'.dependencies]
natpmp = { version = "0.4", default-features = false }

[dev-dependencies]
libp2p = { version = "0.52", features = ["full"] }
libp2p-quic = { git = "https://github.com/libp2p/rust-libp2p", rev = "2910c985e8ab75b52d36701b9c7717ebf0fd8585", features = ["async-std"]}
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[patch.crates-io]
libp2p = { version = "0.52", git = "https://github.com/libp2p/rust-libp2p", rev = "2910c985e8ab75b52d36701b9c7717ebf0fd8585" }